# card-rpg-lab

./: CMakeLists.txt  Doxyfile  Entity.cpp  Entity.h  LICENSE  Makefile  README.md  tests.cpp
.github/workflows/: ci.yml
docs/: class_diagram.md  component_diagram.md  requirements_use_cases.md  system_overview.md  testing_plan.md  testing_report.md
include/: AI.h  Ability.h  AdvancedAI.h  Archer.h  Armor.h  AttackCard.h  BattleMode.h  BossAI.h  BurningEffect.h  Card.h  Character.h  Deck.h  DefenseCard.h  DungeonMode.h  EasyAI.h  Entity.h  ExplorationMode.h  Fireball.h  GameManager.h  GameMode.h  Healer.h  HealthPotion.h  IceSpike.h  Inventory.h  Item.h  LightningCard.h  Mage.h  ManaElixir.h  Poison.h  PvPMode.h  Regeneration.h  Shield.h  SpecialCard.h  SpellCard.h  TradingMode.h  TrapCard.h  UI.h  Warrior.h  Weapon.h
src/: AdvancedAI.cpp  Archer.cpp  Armor.cpp  AttackCard.cpp  BattleMode.cpp  BossAI.cpp  BurningEffect.cpp  Character.cpp  Deck.cpp  DefenseCard.cpp  DungeonMode.cpp  EasyAI.cpp  Entity.cpp  Entity.h  ExplorationMode.cpp  Fireball.cpp  GameManager.cpp  GameMode.cpp  Healer.cpp  IceSpike.cpp  Inventory.cpp  Item.cpp  LightningCard.cpp  Mage.cpp  Poison.cpp  PvPMode.cpp  Regeneration.cpp  Shield.cpp  SpecialCard.cpp  SpellCard.cpp  TradingMode.cpp  TrapCard.cpp  UI.cpp  Warrior.cpp  Weapon.cpp  main.cpp
tests/: tests.cpp
